<resources>
    <string name="app_name">Sổ nợ</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="liabilities">Nợ phải trả</string>
    <string name="account_balance">Số dư TK</string>
    <string name="zero">0</string>
    <string name="title">Tiêu đề</string>
    <string name="amount">Số tiền</string>
    <string name="save">Lưu lại</string>
    <string name="accept">Chấp nhận</string>
    <string name="cancel">Hủy bỏ</string>
    <string name="alert_msg_delete">Bạn có muốn xóa này không?</string>
    <string name="notification_title">Thông báo</string>
    <string name="notification_msg">Tổng số tiền cần phải thanh toán là </string>
    <string name="paid">Đã thanh toán</string>
    <!-- For Auth   -->
    <string name="password">Mật khẩu</string>
    <string name="re_password">Nhập lại mật khẩu</string>
    <string name="login">Đăng nhập</string>
    <string name="register">Đăng ký</string>
    <string name="do_not_have_an_account">Bạn chưa có tài khoản?</string>
    <string name="already_a_member">Bạn đã có tài khoản?</string>
    <string name="register_here">Đăng ký ngay</string>
    <string name="login_here">Đăng nhập ngay</string>
    <string name="register_new_account">Đăng ký thành viên</string>
    <string name="helper_password">* Mật khẩu chứa ít nhật 6 ký tự</string>
    <string name="close">Đóng</string>
    <string name="logout">Đăng xuất</string>
    <string name="forget_password">Quên mật khẩu?</string>
    <string name="send_mail">Gửi</string>
    <string name="reset_password">Khôi phục mật khẩu</string>
    <string name="helper_forget_password">
        Vui lòng nhập Email bạn đã dùng để khôi phục mật khẩu.
    </string>
    <string name="prompt_info_title">Xác thực sinh trắc học</string>
    <string name="prompt_info_description">Yêu cầu xác thực</string>
    <string name="prompt_info_cancel">Hủy bỏ</string>

    <string name="msg_login_failure">Email hoặc mật khẩu không đúng.</string>
    <string name="tap_to_login">Đăng nhập băng vân tay</string>

</resources>